Added some temporary debugging statements