@@ -73,6 +73,7 @@ public class BountyMap implements Listener {
     private static int updateInterval;
     private static boolean alwaysUpdate;
     private static boolean saveTemplates;
+    private static String mapWorld;
 
 
     public static void initialize(Plugin plugin){
@@ -122,6 +123,7 @@ public class BountyMap implements Listener {
         craftPoster = config.getBoolean("craft-poster");
         washPoster = config.getBoolean("wash-poster");
         writePoster = config.getBoolean("write-poster");
+        mapWorld = config.getString("map-world");
 
         MapColor.setBlends(config.getInt("face-shading.blends"));
         MapColor.setMaxColorDistance(config.getInt("face-shading.max-color-distance"));
@@ -255,9 +257,14 @@ public class BountyMap implements Listener {
                 item.setItemMeta(mapMeta);
             } else {
                 if (mapView != null) {
+                    NotBounties.debugMessage("Renderers before adding (loadItem): " + mapView.getRenderers().stream().map(mapRenderer -> mapRenderer.getClass().getName()).toList(), false); // REMOVE LATER
                     mapView.setLocked(lockMaps);
                     mapView.getRenderers().forEach(mapView::removeRenderer);
                     mapView.addRenderer(new Renderer(uuid, plugin));
+                    MapView finalMapView = mapView;
+                    NotBounties.getServerImplementation().global().runDelayed(() -> {
+                        NotBounties.debugMessage("Renderers after adding (loadItem): " + finalMapView.getRenderers().stream().map(mapRenderer -> mapRenderer.getClass().getName()).toList(), false); // REMOVE LATER
+                    }, 5);
                 } else {
                     mapView = getMapView(uuid);
                     mapMeta.setMapView(mapView);
@@ -505,14 +512,22 @@ public class BountyMap implements Listener {
         if (mapViews.containsKey(uuid)) {
             mapView = mapViews.get(uuid);
         } else {
-            mapView = Bukkit.createMap(Bukkit.getWorlds().get(0));
+            World world = mapWorld.isEmpty() ? null : Bukkit.getWorld(mapWorld);
+            if (world == null) {
+                world = Bukkit.getWorlds().getFirst();
+            }
+            mapView = Bukkit.createMap(world);
             mapViews.put(uuid, mapView);
         }
+        NotBounties.debugMessage("Renderers before adding (mapView): " + mapView.getRenderers().stream().map(mapRenderer -> mapRenderer.getClass().getName()).toList(), false); // REMOVE LATER
         mapView.setUnlimitedTracking(false);
         mapView.getRenderers().forEach(mapView::removeRenderer);
         mapView.setLocked(lockMaps);
         mapView.setTrackingPosition(false);
         mapView.addRenderer(new Renderer(uuid, plugin));
+        NotBounties.getServerImplementation().global().runDelayed(() -> {
+            NotBounties.debugMessage("Renderers after adding (mapView): " + mapView.getRenderers().stream().map(mapRenderer -> mapRenderer.getClass().getName()).toList(), false); // REMOVE LATER
+        }, 5);
         return mapView;
     }
 
